--- a/ASPMVC_Practice/ASPMVC_Practice.csproj
+++ b/ASPMVC_Practice/ASPMVC_Practice.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CSharp-Engine\Engine.csproj" />
+  </ItemGroup>
+
 </Project>
