--- a/ASPMVC_Practice/appsettings.json
+++ b/ASPMVC_Practice/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ASPMVC_PracticeContext": "Server=(localdb)\\mssqllocaldb;Database=ASPMVC_Practice.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
