MMAS 프로그램 엔터티 프레임워크 적용

--- a/ASPMVC_Practice/ASPMVC_Practice.csproj
+++ b/ASPMVC_Practice/ASPMVC_Practice.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="efpt.config.json" />
     <_ContentIncludedByDefault Remove="wwwroot\css\CalebDiaryListView.css" />
   </ItemGroup>
 
